kubernetes/apps/cyberchef/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyberchef
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: cyberchef
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cyberchef
    spec:
      containers:
        - name: cyberchef
          image: ghcr.io/gchq/cyberchef
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 150Mi
            requests:
              memory: 150Mi
      nodeSelector:
        worker: "true"
