kubernetes/apps/cyberchef/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cyberchef-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cyberchef
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
