kubernetes/apps/cyberchef/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cyberchef-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-external
  routes:
    - match: Host(`cyberchef.home.lungoo.de`)
      kind: Rule
      services:
        - name: cyberchef-service
          port: 8080
